@@ -2,13 +2,13 @@
     DirB:        1*L->H,        0*H->L
  EnableA:        1*L->H,        1*H->L
  EnableB:        1*L->H,        0*H->L
-   StepA:      683*L->H,      683*H->L, Max High=9us Total High=3160us
+   StepA:      685*L->H,      685*H->L, Max High=12us Total High=3181us
    StepB:        0*L->H,        0*H->L, Max High=0us Total High=0us
-Position[A]=317
+Position[A]=315
 
-Time in DirA  max=417900 us, total=417900 us
+Time in DirA  max=430189 us, total=430189 us
 
-Time in EnableA  max=192594 us, total=192594 us
+Time in EnableA  max=200786 us, total=200786 us
 
-Time in StepA  max=9 us, total=3160 us
+Time in StepA  max=12 us, total=3181 us
 
